# SolarSystem

./: .clang-tidy  .gitignore  Application.h  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
Physics/: Body.cpp  Simulation.cpp
Rendering/: Camera.h  InputHandler.h  Renderer.h
app/: CMakeLists.txt
assets/shaders/: atmosphere.frag  atmosphere.vert  glow.frag  line.frag  line.vert  points.frag  points.vert  rings.frag  star.frag  star.vert  sun.frag
engine/: CMakeLists.txt
engine/graphics/: Renderer.cpp
engine/include/engine/core/: Logger.h  Vec2.h
engine/include/engine/graphics/: Camera.h  Renderer.h  Shader.h
engine/include/engine/input/: InputHandler.h
engine/include/engine/physics/: Body.h  QuadTree.h  Simulation.h
engine/src/core/: Logger.cpp
engine/src/graphics/: Camera.cpp  Renderer.cpp  Shader.cpp
engine/src/input/: InputHandler.cpp
engine/src/physics/: Body.cpp  QuadTree.cpp  Simulation.cpp
game/: Application.cpp  Application.h  CMakeLists.txt
physics/: Body.h  Simulation.cpp  Simulation.h
shaders/: atmosphere.frag  points.frag  points.vert
